--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,14 @@
   "author": "Web Applications I",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "cookie-parser": "^1.4.5",
+    "cookieparser": "^0.1.0",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-validator": "^6.6.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
+    "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {}
 }
